<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/default_layout_background"
        />

    <ImageView
        android:id="@+id/logo_login_imageview"
        android:layout_width="@dimen/logo_icon"
        android:layout_height="@dimen/logo_icon"
        android:src="@drawable/oishii_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/xl_space"
        />
    <TextView
        android:id="@+id/login_textview"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo_login_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/very_small_space"
        android:textSize="@dimen/infomenu_text"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/login"
        />

    <TextView
        android:id="@+id/create_account_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_textview"
        app:layout_constraintEnd_toEndOf="@id/login_textview"
        app:layout_constraintStart_toStartOf="@id/login_textview"
        android:textSize="@dimen/infomenu_text"
        android:layout_marginTop="@dimen/small_space"
        android:textColor="@color/black"
        android:text="@string/registrer"
        />

    <TextView
        android:id="@+id/with_out_user_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/infomenu_text"
        android:layout_marginTop="@dimen/small_space"
        app:layout_constraintTop_toBottomOf="@id/create_account_textview"
        app:layout_constraintEnd_toEndOf="@id/login_textview"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/login_textview"
        android:text="@string/fortsett_uten_bruker"
        />

</androidx.constraintlayout.widget.ConstraintLayout>